--- a/css/main.css
+++ b/css/main.css
@@ -72,9 +72,10 @@ body {
 }
 
 .outlined {
-  outline: 1px solid rgba(0,0,0,0.1);
+  outline: 1px solid rgba(255,255,255,0.05);
   padding-top: 10px;
   margin-bottom: 10px;
+  text-align: center;
 }
 
 
